Update health check endpoint with hardware diagnostics

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ numpy>=1.26.0
 # --- Utilities ---
 requests>=2.31.0
 transformers>=4.38.0
+
+# --- Progress Bar ---
 tqdm>=4.66.0
 
 # --- Model Engine ---
